--- a/TaskList/src/main/res/values/strings.xml
+++ b/TaskList/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Task List</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="add_Btn">New Task</string>
+    <string name="create_Btn">Add Task</string>
+    <string name="edit_message">What is your task?</string>
 
 </resources>
